--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   },
   "engines": {
     "node": ">=14.0.0"
+  },
+  "devDependencies": {
+    "@azure/static-web-apps-cli": "^2.0.7"
   }
 }
-
-
